infrastructure/helm-installs/ngf/production/gateway-dkroesen.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: Gateway
metadata:
  name: gateway-dkroesen
  namespace: nginx-gateway
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  gatewayClassName: nginx
  listeners:
    - name: http
      port: 80
      protocol: HTTP
    - name: https-echo1
      port: 443
      protocol: HTTPS
      hostname: "echo1.dkroesen.nl"
      tls:
        mode: Terminate
        certificateRefs:
          - kind: Secret
            name: dkroesen-tls-secret
      allowedRoutes:
        namespaces:
          from: All
    - name: https-api
      port: 443
      protocol: HTTPS
      hostname: "api.dkroesen.nl"
      tls:
        mode: Terminate
        certificateRefs:
          - kind: Secret
            name: api-dkroesen-tls-secret
      allowedRoutes:
        namespaces:
          from: All
    - name: https-auth
      port: 443
      protocol: TLS
      hostname: "auth.dkroesen.nl"
      tls:
        mode: Passthrough
        certificateRefs:
          - kind: Secret
            name: auth-dkroesen-tls-secret
      allowedRoutes:
        kinds:
          - kind: TLSRoute
        namespaces:
          from: All
